# funflags

./: README.md  pyproject.toml
src/funflags/: FunFlags.py
