[tool.poetry]
name = "funflags"
version = "0.1.0"
description = "A feature flag library - made with flask."
authors = ["Harrington"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
