[tool.poetry]
name = "funflags"
version = "0.1.0"
description = "A feature flag library - made with flask."
authors = ["Harrington"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
